2005-04-16  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nsmain.c: removed extra colon in variable declaration
	which caused some older gcc compilers to break.

2005-04-11  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/info.c:
	* nsd/proc.c:
	* nsd/return.c:
	* nsd/server.c:
	* nsd/fastpath.c:
	* nsd/pathname.c: New concept: server root. Callback can be
	registered to create the server root, defaults to statically
	assigned 'serverroot' from config, or host-based if enabled.
	Many virtual hosting options added. (RFE #1159471)
	* nsd/conn.c: Add callback to generate current location. If none
	registered, uses host-header and falls back to driver's location.
	Add new Ns_ConnAppendLocation() as preferred method of access,
	depreciated Ns_ConnLocation().
	* nsd/tclcmds.c: Add vhost related Tcl commands: ns_serverpath
	ns_pagepath ns_hashpath ns_serverrootproc ns_locationproc.
	* ns_pagepath.test:
	* ns_conn_host.test:
	* ns_serverpath.test:
	* ns_hashpath.test:
	* tests/test.nscfg: Add tests for vhost related commands. More
	location tests needed...

	* nsd/proc.c: Add proc info for NsFastGet.  Cleanup source code
	formatting.

	* tests/ns_urlencode.test: Add missing tests for urlencode fix.

2005-04-09  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_parseargs.test: Re-enable test for corrupted literal
	table.

2005-04-09  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/dns.c: Fixed GetAddr() when dealing with gethostbyname_r
	  calls. In some/many cases we ended up in an infinite loop.

	* nsd/tclobjv.c: SetSpecFromAny does not invalidate string rep 
	  of the passed object after converting it to the ns:spec
	  object type. This will definitely corrupt the interp literal
	  table and result in process exitus when the interp is being
	  destroyed.
	* nsd/tclobj.c: fixed broken ptr deref
	* nsd/nsmain.c: adjusted options parsing for Windows / unix

2005-04-08  Zoran Vasiljevic  <vasiljevic@users.sf.net>
